remove one upload photo on mobile, to fix the gold member function page and update mobile css

--- a/templates/css/mobile.css
+++ b/templates/css/mobile.css
@@ -649,6 +649,10 @@
     .table_membership.table > tbody > tr > td, .table_membership.table > tbody > tr > th, .table_membership.table > tfoot > tr > td, .table_membership.table > tfoot > tr > th, .table_membership.table > thead > tr > td, .table_membership.table > thead > tr > th {
         padding: 8px;
     }
+
+    .btn_editGallery_custom {
+        display: inline-block;
+    }
 }
 
 @media (min-width: 480px) and (max-width: 768px) {
