--- a/templates/css/styles.css
+++ b/templates/css/styles.css
@@ -776,7 +776,7 @@ header .navbar-brand {
     margin: 0 20px 0;
     letter-spacing: -0.05em;
     position: relative;
-    top: 10px;
+    /*top: 10px;*/
 }
 
 .w_footer {
@@ -3144,4 +3144,16 @@ label label.error{
 .radio-tile-group .input-container .radio-button:checked + .radio-tile .radio-tile-label {
     color: white;
     background-color: #ffa507;
+}
+
+.btn_editGallery_custom {
+    background: #f2f5f7;
+    display: inline-block;
+    padding: 30px 40px;
+    margin-top: 15px;
+    display: none;
+    text-align: center;
+}
+.btn_editGallery_custom span {
+    color: #000;
 }
